--- a/styles/common.css
+++ b/styles/common.css
@@ -14,6 +14,10 @@ html {
   background-color: #fff;
 }
 
+*[hidden] {
+  display: none !important;
+}
+
 #app {
   display: flex;
   flex-direction: column;
