chore: adding Drive data import bindings
Signed-off-by: Pawel Psztyc <jarrodek@gmail.com>

--- a/styles/data-import.css
+++ b/styles/data-import.css
@@ -31,3 +31,12 @@ main {
   width: 128px;
   height: 128px;
 }
+
+.centered {
+  text-align: center;
+}
+
+.api-list {
+  margin: 0;
+  padding: 0;
+}
