--- a/demo/themes/arc-electron-dark-theme.css
+++ b/demo/themes/arc-electron-dark-theme.css
@@ -6,10 +6,36 @@ html {
   --primary-background-color: #212121;
   --secondary-background-color: #313131;
   --error-color: #ff9090;
+  --error-message-color: var(--error-color);
   --link-color: #8bc34a;
   --input-background-color: var(--primary-background-color);
   --active-background-color: #616161;
+  --dark-divider-opacity: 0.12;
+  
+  --anypoint-checkbox-label-color:  #F5F5F5;
+  --anypoint-input-background-color: var(--input-background-color);
+  --anypoint-input-label-color: var(--primary-text-color);
+  --anypoint-input-input-color: var(--primary-text-color);
+  --anypoint-input-border-bottom-color: var(--primary-text-color);
+  --anypoint-input-focused-border-bottom-color: var(--primary-text-color);
+  --anypoint-input-label-background-color: rgb(66, 66, 66);
+  --anypoint-input-legacy-focus-background-color: #3a3b3c;
+  --anypoint-input-legacy-focus-border-color: #178bea;
+  --anypoint-input-info-message-color: var(--primary-text-color);
+  
+  --anypoint-dropdown-menu-background-color: var(--input-background-color);
+  --anypoint-dropdown-menu-label-background-color: var(--primary-background-color);
+  --anypoint-listbox-background-color: var(--input-background-color);
+  --anypoint-dropdown-menu-focus-background-color: var(--active-background-color);
+  --anypoint-dropdown-menu-label-color: var(--primary-text-color);
+  --anypoint-dropdown-menu-info-message-color: var(--primary-text-color);
+  --anypoint-item-hover-background-color: var(--active-background-color);
+  --anypoint-item-focused-background-color: var(--primary-background-color);
+  --anypoint-item-before-background: transparent;
+  --anypoint-icon-button-emphasis-low-color: #c5c5c5;
+  
   --empty-info-color: var(--primary-text-color);
+  --no-info-message-color: var(--secondary-text-color);
 
   --anypoint-dropdown-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
   --anypoint-autocomplete-dropdown-shadow: var(--anypoint-dropdown-shadow);
@@ -33,53 +59,19 @@ html {
   --anypoint-chip-label-active-color: var(--primary-text-color);
   --anypoint-chip-focused-background-color: #34434b;
   --anypoint-chip-background-color: var(--secondary-background-color);
-
-  --anypoint-checkbox-label-color:  #F5F5F5;
-  --anypoint-input-background-color: var(--input-background-color);
-  --anypoint-input-label-color: var(--primary-text-color);
-  --anypoint-input-input-color: var(--primary-text-color);
-  --anypoint-input-border-bottom-color: var(--primary-text-color);
-  --anypoint-input-focused-border-bottom-color: var(--primary-text-color);
-  --anypoint-input-label-background-color: rgb(66, 66, 66);
-  --anypoint-input-legacy-focus-background-color: #3a3b3c;
-  --anypoint-input-legacy-focus-border-color: #178bea;
-  --anypoint-input-info-message-color: var(--primary-text-color);
-
-  --no-info-message-color: var(--secondary-text-color);
-
+  
   --anypoint-menu-button-border-radius: 12px;
-
-  --anypoint-dropdown-menu-background-color: var(--input-background-color);
-  --anypoint-dropdown-menu-label-background-color: var(--primary-background-color);
-  --anypoint-listbox-background-color: var(--input-background-color);
-  --anypoint-dropdown-menu-focus-background-color: var(--active-background-color);
-  --anypoint-dropdown-menu-label-color: var(--primary-text-color);
-  --anypoint-dropdown-menu-info-message-color: var(--primary-text-color);
-  --anypoint-item-hover-background-color: var(--active-background-color);
-  --anypoint-item-focused-background-color: var(--primary-background-color);
   --anypoint-autocomplete-background-color: var(--input-background-color);
-  --anypoint-icon-button-emphasis-low-color: #c5c5c5;
-  --anypoint-item-before-background: transparent;
-
+  
   --anypoint-button-emphasis-low-hover-background-color: var(--active-background-color);
   --anypoint-button-emphasis-low-focus-background-color: var(--anypoint-button-emphasis-low-hover-background-color);
   --anypoint-button-emphasis-low-focus-color: var(--primary-color);
   --anypoint-button-emphasis-high-color: #000;
   /* --anypoint-button-emphasis-high-hover-background-color: var(--primary-color); */
 
-  --code-mirror-background-color: #1e1e1e;
-  --code-mirror-gutters-background-color: #1e1e1e;
-  --code-mirror-string-color: #C3E88D;
-  --code-mirror-punctuation-color: #EEFFFF;
-  --code-mirror-atom-color: #F07178;
-  --code-mirror-number-color: #F78C6A;
-  --code-mirror-cursor-color: #009688;
-  --code-mirror-tag-color: var(--primary-text-color);
-  --code-mirror-tag-color: #b4b4b4;
-  --code-mirror-gutters-border-right-color: #757575;
-
   --code-operator-value-background-color: transparent;
-  --code-background-color: var(--primary-background-color);
+  /* --code-background-color: var(--primary-background-color); */
+  --code-background-color: #202020;
   --code-color: var(--primary-text-color);
   --code-type-number-value-color: #eb67b0;
   --code-property-value-color: #b0e6ff;
@@ -97,10 +89,9 @@ html {
   --http-code-snippet-code-keyword-color: #C792EA;
   --http-code-snippet-code-cdata-color: #adb9c5;
 
-  --auth-method-oauth2-redirect-info-color: var(--primary-text-color);
-
   --authorization-method-oauth2-redirect-info-color: var(--secondary-text-color);
   --auth-method-certificate-second-line-color: var(--secondary-text-color);
+  --auth-method-oauth2-redirect-info-color: var(--primary-text-color);
 
   --request-editor-url-area-background-color: var(--primary-background-color);
   --request-editor-url-input-background-color: var(--primary-background-color);
@@ -126,9 +117,9 @@ html {
 
   /* Response view styles */
   --response-empty-panel-background-color: var(--primary-background-color);
-  --error-message-icon-color: rgba(255, 255, 255, 0.64);
   --error-message-color: var(--primary-text-color);
-  --error-message-code-color: #9e9e9e;
+  --error-message-icon-color: #cccccc;
+  --error-message-code-color: var(--secondary-text-color);
   --response-status-view-request-url-background-color: var(--secondary-background-color);
   --response-tabs-border-color: #757575;
   --response-tab-close-hover-background-color: var(--secondary-background-color);
@@ -143,6 +134,7 @@ html {
 
   /* App toolbar */
   --arc-toolbar-background: var(--primary-background-color);
+  --arc-toolbar-color: var(--primary-text-color);
 
   /* ARC menu */
   --arc-rail-menu-icon-color: #757575;
@@ -157,11 +149,11 @@ html {
   --requests-list-content-actions-icon-color: var(--secondary-text-color);
 
   /* HTTP method colors */
-  --http-get-color: #c6f68d;
-  --http-post-color: #b39afd;
-  --http-put-color: #ffc77d;
-  --http-patch-color: #f186c0;
-  --http-delete-color: #FF5252;
+  --http-get-color: rgba(0, 128, 0, 0.74);
+  --http-post-color: rgba(33, 150, 243, 0.74);
+  --http-put-color: rgba(255, 165, 0, 0.74);
+  --http-patch-color: rgb(156, 39, 176);
+  --http-delete-color: rgba(244, 67, 54, 0.74);
   --http-options-color: rgba(128, 128, 128, 0.74);
   --http-head-color: rgba(128, 128, 128, 0.74);
   --http-connect-color: rgba(128, 128, 128, 0.74);
@@ -207,10 +199,6 @@ html {
   /* Client certificates */
   --certificate-details-data-list-color: var(--primary-text-color);
 
-  /* API Console's try it */
-  --api-endpoint-documentation-tryit-background-color: var(--secondary-background-color);
-  --api-endpoint-documentation-tryit-panels-background-color: var(--primary-background-color);
-
   /* Exchange browser */
   --exchange-search-list-item-author-color: var(--secondary-text-color);
 
@@ -233,35 +221,40 @@ html {
   --import-table-auth-no-info-color: var(--secondary-text-color);
 
   /* API Console */
-  --api-type-document-property-color: : var(--primary-text-color);
-  --api-type-document-property-title-secondary-color: var(--secondary-text-color);
-  --json-table-list-property-name-color: var(--primary-text-color);
-  --json-table-complex-name-label-color: var(--secondary-text-color);
-  --json-table-array-body-color: var(--primary-text-color);
-  --json-table-array-header-color: var(--secondary-text-color);
-  --json-table-item-border-bottom-color: #9E9E9E;
-  --api-type-document-union-button-color: var(--primary-text-color);
-  --api-annotation-background-color: var(--primary-background-color);
-  --api-type-document-type-attribute-color: var(--primary-text-color);
-  --api-annotation-document-color: var(--primary-text-color);
-  --api-body-document-description-color: var(--primary-text-color);
-  --api-method-documentation-description-color: var(--primary-text-color);
-  --api-method-documentation-url-background-color: var(--code-background-color);
-  --api-type-document-property-parent-color: var(--primary-text-color);
-  --from-row-action-icon-color: var(--primary-text-color);
-  --icon-button-color: var(--primary-text-color);
-  --api-form-action-icon-color: var(--primary-text-color);
-  --api-form-action-button-color: var(--primary-text-color);
-  --inline-documentation-color: var(--primary-text-color);
-  --api-endpoint-documentation-bottom-navigation-color: var(--link-color);
-  --api-endpoint-documentation-description-color: var(--primary-text-color);
-  --api-method-documentation-bottom-navigation-color: var(--link-color);
-  --api-body-document-toggle-view-color: var(--primary-text-color);
-  --api-body-document-code-color: var(--primary-text-color);
-  --inline-documentation-background-color: #3a3a3a;
+  --operation-params-title-color: var(--primary-text-color);
+  --operation-subheader-color: var(--secondary-text-color);
+  --operation-description-color: var(--secondary-text-color);
+  --resource-subheader-color: var(--secondary-text-color);
+  --security-subheader-color: var(--secondary-text-color);
+  --pill-color: var(--primary-text-color);
+  --markdown-styles-code-text-shadow: none;
+  --markdown-styles-h6-color: var(--secondary-text-color);
   --markdown-styles-table-row-background-color: var(--primary-background-color);
   --markdown-styles-table-even-row-background-color: var(--secondary-background-color);
-  --api-method-documentation-operation-id-color: var(--secondary-text-color);
+  --code-color: var(--primary-text-color);
+  
+  --code-punctuation-value-color: var(--code-color);
+  --inline-documentation-color: var(--primary-text-color);
+  --inline-documentation-background-color: #3a3a3a;
+  --api-annotation-document-color: var(--primary-text-color);
+  --api-annotation-background-color: var(--primary-background-color);
+  --api-body-document-description-color: var(--primary-text-color);
+  --api-endpoint-url-background-color: var(--primary-background-color);
+  --api-endpoint-url-color: var(--primary-text-color);
+  --resource-tryit-background-color: var(--code-background-color);
+  --resource-tryit-panels-background-color: transparent;
+  --api-navigation-list-item-selected-background-color: #e8e9ea;
+  --api-navigation-section-title-focus-background-color: var(--primary-background-color);
+  --api-navigation-list-item-selected-color: #000;
+  --api-navigation-background-color: var(--secondary-background-color);
+  --api-navigation-color: var(--primary-text-color);
+  --api-navigation-list-item-selected-icon-color: var(--accent-color);
+  --resource-title-color: var(--primary-text-color);
+  --operation-title-color: var(--primary-text-color);
+  --api-description-color: var(--secondary-text-color);
+
+  --markdown-styles-table-row-background-color: var(--primary-background-color);
+  --markdown-styles-table-even-row-background-color: var(--secondary-background-color);
 
   /* cookie manager */
   --cookie-details-meta-color: var(--primary-text-color);
@@ -273,7 +266,6 @@ html {
 }
 
 body {
-  background-color: var(--secondary-background-color); 
   color: var(--primary-text-color);
-  --arc-font-code-family: Roboto Mono, Noto, monospace;
+  background-color: var(--secondary-background-color);
 }
